--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-:root {
-    --primary-color:#fff8dc;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -21,4 +17,10 @@ header {
     display:flex;
     justify-content:space-between;
     flex-wrap: wrap;
+}
+header h1 {
+    font-weight:bolder;
+    font-size: 40px;
+    color:darkslateblue;
+    margin: 0;
 }
