--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,25 @@ header h1 {
     color:darkslateblue;
     margin: 0;
 }
+
+header nav {
+    margin: 9px 0;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
+    margin: 0 40px;
+    font-weight:bold;
+    font-size:larger;
+    color:darkslateblue;
+    text-decoration:underline;
+    border-bottom: 4px;
+    padding-bottom: 4px;
+}
