--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,3 +116,85 @@ section {
     margin-left: 25px;
     width: 100%;
 }
+
+.border2 {
+    border-right: 1px solid black;
+    height: 120px;
+    flex: 0 5.2%;
+}
+
+.picture-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+    width: 70%;
+}
+
+.pictures {
+    display:grid;
+    grid-template:auto;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+    margin-left: 50px;
+}
+
+.picture-1 {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border: solid 1px darkslateblue;
+    max-width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    position: relative;
+
+    
+
+}
+
+.figcaption{
+    position: absolute;
+    margin-left: -20%;
+    font-size: 12px;
+    font-style: fantasy; 
+    font-weight: bold;
+    color:darkslategray;
+    border: solid 1px darkslateblue;
+    background-color: plum
+}
+
+
+/* Adding style to the contact section */
+.border3 {
+    border-right: 1px solid black;
+    height: 120px;
+    flex: 0 4px;
+}
+
+.contact-info {
+    flex: 200;
+}
+
+.contact-info ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: left;
+    list-style: none;
+    margin-left: 20px;
+    width: 100%;
+}
+
+.contact-info ul li a {
+    margin: 0 30px;
+    font-size: 20px;
+    color: darkslateblue;
+    text-decoration:underline;
+    border-bottom: 3px;
+    padding-bottom: 2px;
+    
+    
+}
