--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,45 @@ h2 {
 .proj1:hover, .proj2:hover, .proj3:hover, .proj4.hover, .proj5:hover {
     opacity: 0.5;
 }
+
+.proj-title {
+    position: absolute;
+    bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: var(--purple);
+    width: max-content;
+    height: 60px;
+    height: min-content;
+    font-family: var(--Trebuchet);
+    color: var(--plum);
+    padding-bottom: 2px;
+}
+
+.proj-title p {
+    font-size: x-small;
+}
+
+/* Contact Me */
+
+.Contact-Me {
+    display: grid;
+    grid-template-columns: 200px auto auto auto;
+    gap: 10px;
+    min-width: 80vw;
+    margin-inline: auto;
+}
+
+.contact-item,#contact-link {
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-family: var(--Trebuchet);
+    color: var(--purple);
+    text-decoration: none;
+    text-underline-offset: 20px;
+    padding-left: 15px;
+}
+
+#contact-link {
+    padding-left: 0px;
+}
