--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,48 @@ h2 {
 #contact-link {
     padding-left: 0px;
 }
+
+/* Media Query */
+
+@media screen and (max-width: 768px) {
+    .header {
+        height: 200px;
+    }
+
+    .Work-Subgrid {
+        grid-template-areas:
+        'header'
+        'main'
+        'right'
+        'main2'
+        'right2' ;
+    }
+        .work-text {
+            width: min-content;
+        }
+        .Overall-Grid {
+            grid-template-columns: 150px 1fr;
+        }
+    }
+
+    @media screen and (max-width 992px){
+        .Contact-Me {
+            grid-template-columns: auto;
+        }
+        .Contact-Me .Overall-Title {
+            text-align: left;
+            padding-left: 15px;
+        }
+    }
+
+    @media screen and (max-width: 828px){
+        .header {
+            height:200px
+        }
+    }
+
+    @media screen and (max-width: 446px){
+        .header {
+            height:300px;
+        }
+    }
